--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<p>Probamos Angular</p>
-<button class="btn btn-primary">test</button>
+<app-header></app-header>
+
+<div class="container-fluid col3-sm">
+    <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
