json-server api provisional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container-fluid col3-sm">
+<div class="container-fluid col3-sm-4 ">
     <router-outlet></router-outlet>
 </div>
 
