--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,51 @@
-<p>main works!</p>
+<div class="container wrapper wrapper2">
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Agregar Instructor</h3>
+            {{ teacherForm }}
+            <form [formGroup]="teacherForm" (ngSubmit)="submitForm()">
+                <div class="form-group">
+                    <label>Nombres</label>
+                    <input type="text" formControlName="name" class="form-control" maxlength="20">
+                </div>
+
+                <div class="form-group">
+                    <label>Apellidos</label>
+                    <input type="text" formControlName="secondName" class="form-control" maxlength="20">
+                </div>
+
+                <div class="form-group">
+                    <label>Correo</label>
+                    <input type="email" formControlName="email" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label>Contraseña</label>
+                    <input type="email" formControlName="password" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <label>Telefono</label>
+                    <input type="text" formControlName="telephone" class="form-control" maxlength="20">
+                </div>
+
+                <div class="form-group">
+                    <label>Activo</label>
+                    <input type="text" formControlName="status" class="form-control" maxlength="20">
+                </div>
+
+                <div class="form-group">
+                    <label>Profesión</label>
+                    <input type="text" formControlName="profession" class="form-control" maxlength="20">
+                </div>
+
+                <div class="form-group">
+                    <label>Tipo de contrato</label>
+                    <input type="text" formControlName="typeContract" class="form-control" maxlength="20">
+                </div>
+
+                <button type="submit" class="btn btn-secondary">Enviar</button>
+            </form>
+        </div>        
+    </div>
+</div>
